--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.5</version>
+		<version>3.4.6</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.daview</groupId>
@@ -89,11 +89,16 @@
 		</dependency>
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
-      
+      		 <artifactId>jjwt-jackson</artifactId> 
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
-
+	    <dependency>
+		     <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
