--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,24 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		  </dependency>
 		  
+		  <!-- WebSocket -->
+		<dependency>
+		  <groupId>org.springframework.boot</groupId>
+		  <artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+		
+		<!-- STOMP 메시징 -->
+		<dependency>
+		  <groupId>org.webjars</groupId>
+		  <artifactId>sockjs-client</artifactId>
+		  <version>1.5.1</version>
+		</dependency>
+		<dependency>
+		  <groupId>org.webjars</groupId>
+		  <artifactId>stomp-websocket</artifactId>
+		  <version>2.3.4</version>
+		</dependency>
+		  
 	</dependencies>
 
 	<build>
