--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,12 @@
 		  <artifactId>stomp-websocket</artifactId>
 		  <version>2.3.4</version>
 		</dependency>
+		
+		<!-- Kafka -->
+		<dependency>
+		  <groupId>org.springframework.kafka</groupId>
+		  <artifactId>spring-kafka</artifactId>
+		</dependency>
 		  
 	</dependencies>
 
