--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,7 @@ spring:
     username: root
     password: rootpw
     driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy # com.mysql.cj.jdbc.Driver
+
   kafka:
     bootstrap-servers: localhost:9092
     consumer:
@@ -19,6 +20,17 @@ spring:
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     properties:
       'allow.auto.create.topics': true
+
+    
+  mail:
+    host: smtp.naver.com
+    port: 465
+    username: choloover0@naver.com 
+    password: han##485959
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.ssl.enable: true
+
 
 logging:
   level:
@@ -40,3 +52,5 @@ server:
   servlet:
     session:
       timeout: 30m
+      
+      
