--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,16 +21,17 @@ spring:
     properties:
       'allow.auto.create.topics': true
 
-    
   mail:
-    host: smtp.naver.com
-    port: 465
-    username: choloover0@naver.com 
-    password: han##485959
+    host: smtp.gmail.com
+    port: 587
+    username: makecritical01@gmail.com
+    password: lzxn dngz umjp tgui
     properties:
-      mail.smtp.auth: true
-      mail.smtp.ssl.enable: true
-
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
 
 logging:
   level:
@@ -40,20 +41,19 @@ logging:
     jdbc.resultset: debug
     jdbc.audit: off
     jdbc.connection: off
-    
+
 mybatis:
   mapper-locations: classpath*:mapper/**/*.xml  # MyBatis 매퍼 XML 파일 위치
   type-aliases-package: com.daview.dto
   configuration:
     map-underscore-to-camel-case: true  # DB 필드명 snake_case → Java camelCase 자동 변환
     # log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl  # MyBatis 로그 SLF4J 사용   
-    
+
 server:
   servlet:
     session:
       timeout: 30m
-     
-      
+
 naver:
   sens:
     access-key: "ncp_iam_BPAMKR4t6gmxw5Yf66MK"
@@ -61,5 +61,3 @@ naver:
     service-id: "ncp:sms:kr:354802395254:daview"
     sender-phone: "01087665119" 
 
-      
-      
