요양사 케어펄스트래커 AI 기능 구현

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<!-- Redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	    <dependency>
 	      <groupId>com.github.iamport</groupId>
 	      <artifactId>iamport-rest-client-java</artifactId>
